# MotionDetection

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/net/qfstudio/motion/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: gesture.yml
app/src/main/cpp/: CMakeLists.txt  motion-lib.cpp  motion-lib.h  native-lib.cpp
app/src/main/java/net/qfstudio/motion/: MainActivity.java  MotionLib.java  MotionLibEventHandler.java  MotionLibJNI.java  SensorHandlerJNI.java
app/src/main/java/net/qfstudio/motion/demo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/net/qfstudio/motion/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
